makeStandardFile